# RP6502-Fool-on-the-Hill

./: CMakeLists.txt  README.md  fool.rp6502
images/: convert.py
src/: fool.c
